--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-find.html
@@ -61,11 +61,11 @@
         <li class="not-selected">
             <a th:href="@{/assessment/interview/competition/{competitionId}/assessors/invite(competitionId=${model.competitionId})}">Invite</a>
         </li>
-        <li class="not-selected">
-            <label>Pending and rejected</label>
+        <li class="not-selected" aria-label="Item not selected">
+            <a class="buttonlink disabled">Pending and rejected</a>
         </li>
-        <li class="not-selected">
-            <label>Accepted</label>
+        <li class="not-selected" aria-label="Item not selected">
+            <a class="buttonlink disabled">Accepted</a>
         </li>
     </ul>
 
@@ -89,7 +89,7 @@
     </div>
 
     <form method="POST"
-          th:action="@{/assessment/panel/competition/{competitionId}/assessors/find/addSelected(competitionId=${model.competitionId})}"
+          th:action="@{/assessment/interview/competition/{competitionId}/assessors/find/addSelected(competitionId=${model.competitionId})}"
           th:object="${assessorInterviewPanelSelectionForm}"
           data-multipage-select=""
           th:attr="data-total-checkboxes=${model.pagination.totalCount}">
