--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-assign-applications-OLD.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-assign-applications-OLD.html
@@ -43,20 +43,17 @@
     </dl>
 
 	<ul class="inline-nav extra-margin-top">
-		<li th:class="${(param.tab == null or param.tab[0] == 'find' ? 'selected' : 'not-selected' )}" th:attr="aria-label=${(param.tab == null or param.tab[0] == 'find' ? 'Item selected' : 'Item not selected' )}">
-			<a th:href="@{'?tab=find'} + ${(param.comp != null ? '&#38;comp=' + param.comp[0] : '')}">Find</a>
+		<li th:class="${(param.tab == null or param.tab[0] == 'assign' ? 'selected' : 'not-selected' )}" th:attr="aria-label=${(param.tab == null or param.tab[0] == 'assign' ? 'Item selected' : 'Item not selected' )}">
+			<a th:href="@{'?tab=assign'} + ${(param.comp != null ? '&#38;comp=' + param.comp[0] : '')}">Assign applications (60)</a>
 		</li>
-        <li th:class="${(param.tab != null and param.tab[0] == 'invite' ? 'selected' : 'not-selected' )}" th:attr="aria-label=${(param.tab != null and param.tab[0] == 'invite' ? 'Item selected' : 'Item not selected' )}">
-            <a th:href="@{'?tab=invite'} + ${(param.comp != null ? '&#38;comp=' + param.comp[0] : '')}">Invite</a>
-        </li>
 		<li th:class="${(param.tab != null and param.tab[0] == 'view' ? 'selected' : 'not-selected' )}" th:attr="aria-label=${(param.tab != null and param.tab[0] == 'view' ? 'Item selected' : 'Item not selected' )}">
-			<a th:href="@{'?tab=view'} + ${(param.comp != null ? '&#38;comp=' + param.comp[0] : '')}">View status</a>
+			<a th:href="@{'?tab=view'} + ${(param.comp != null ? '&#38;comp=' + param.comp[0] : '')}">View status (23)</a>
 		</li>
 	</ul>
 
     <div class="grid-row sorting extra-margin">
         <div class="column-half">
-            <th:block th:if="${param.tab == null or param.tab[0] == 'find'}">
+            <th:block th:if="${param.tab == null or param.tab[0] == 'assign'}">
                 <span class="heading-xlarge no-margin">60</span>
                 <span class="heading-small">applications in competition</span>
             </th:block>
@@ -67,7 +64,7 @@
         </div>
     </div>
 
-    <th:block th:if="${param.tab == null or param.tab[0] == 'find'}">
+    <th:block th:if="${param.tab == null or param.tab[0] == 'assign'}">
         <div class="grid-row sorting">
             <div class="column-half select-all">
                 <div class="multiple-choice">
@@ -94,20 +91,20 @@
         <table>
             <thead>
                 <tr>
-                    <th:block th:if="${param.tab == null or param.tab[0] == 'find'}">
+                    <th:block th:if="${param.tab == null or param.tab[0] == 'assign'}">
                         <th class="width-small">Select</th>
                     </th:block>
                     <th class="width-small">Application number</th>
                     <th>Project title</th>
                     <th>Lead organisation</th>
-                    <th:block th:if="${param.tab != null and param.tab[0] == 'find'}">
+                    <th:block th:if="${param.tab != null and param.tab[0] == 'view'}">
                         <th colspan="2">Status</th>
                     </th:block>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <th:block th:if="${param.tab == null or param.tab[0] == 'find'}">
+                    <th:block th:if="${param.tab == null or param.tab[0] == 'assign'}">
                         <td>
                             <div class="multiple-choice">
                                 <input type="checkbox" id="assessor-row-1" value="205" name="selectedAssessorIds"><input type="hidden" name="_selectedAssessorIds" value="on">
@@ -126,7 +123,7 @@
                     </th:block>
                 </tr>
                 <tr>
-                    <th:block th:if="${param.tab == null or param.tab[0] == 'find'}">
+                    <th:block th:if="${param.tab == null or param.tab[0] == 'assign'}">
                         <td>
                             <div class="multiple-choice">
                                 <input type="checkbox" id="assessor-row-2" value="205" name="selectedAssessorIds"><input type="hidden" name="_selectedAssessorIds" value="on">
@@ -145,7 +142,7 @@
                     </th:block>
                 </tr>
                 <tr>
-                    <th:block th:if="${param.tab == null or param.tab[0] == 'find'}">
+                    <th:block th:if="${param.tab == null or param.tab[0] == 'assign'}">
                         <td>
                             <div class="multiple-choice">
                                 <input type="checkbox" id="assessor-row-3" value="205" name="selectedAssessorIds"><input type="hidden" name="_selectedAssessorIds" value="on">
@@ -164,7 +161,7 @@
                     </th:block>
                 </tr>
                 <tr>
-                    <th:block th:if="${param.tab == null or param.tab[0] == 'find'}">
+                    <th:block th:if="${param.tab == null or param.tab[0] == 'assign'}">
                         <td>
                             <div class="multiple-choice">
                                 <input type="checkbox" id="assessor-row-4" value="205" name="selectedAssessorIds"><input type="hidden" name="_selectedAssessorIds" value="on">
@@ -183,7 +180,7 @@
                     </th:block>
                 </tr>
                 <tr>
-                    <th:block th:if="${param.tab == null or param.tab[0] == 'find'}">
+                    <th:block th:if="${param.tab == null or param.tab[0] == 'assign'}">
                         <td>
                             <div class="multiple-choice">
                                 <input type="checkbox" id="assessor-row-5" value="205" name="selectedAssessorIds"><input type="hidden" name="_selectedAssessorIds" value="on">
