--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/invite.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/invite.html
@@ -145,8 +145,7 @@
                                                         data-minlength-errormessage=#{validation.standard.name.length.min(null,null,2)},
                                                         data-maxlength-errormessage=#{validation.standard.name.length.max(null,null,70)},
                                                         data-pattern-errormessage=#{validation.standard.name.invalid}"
-                                               th:name="invites[__${iterStat.index}__].name"
-                                               th:id="invites[__${iterStat.index}__].name"
+                                               th:field="*{invites[__${iterStat.index}__].name}"
                                         />
                                     </td>
                                     <td class="width-40-percent form-group" th:classappend="${#fields.hasErrors('invites[__${iterStat.index}__].email')} ? 'form-group-error'">
@@ -163,8 +162,7 @@
                                                         data-email-errormessage=#{validation.standard.email.format},
                                                         data-required-errormessage=#{validation.inviteNewAssessorsForm.invites.email.required}"
                                                th:errorclass="form-control-error"
-                                               th:name="invites[__${iterStat.index}__].email"
-                                               th:id="invites[__${iterStat.index}__].email"
+                                               th:field="*{invites[__${iterStat.index}__].email}"
                                         />
                                     </td>
                                     <td class="alignright width-20-percent">
