IFS-2746: Simplify thymeleaf template

--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-checks.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-checks.html
@@ -40,7 +40,7 @@
         </p>
     </th:block>
 
-    <th:block th:unless="${model.noQueries()} == true">
+    <th:block th:unless="${model.noQueries()}">
         <th:block th:if="${model.getPendingQueries().isEmpty()}">
             <th:block th:if="${model.getAwaitingResponseQueries().isEmpty()}">
                 <div class="success-alert">
