--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-checks.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-checks.html
@@ -30,7 +30,7 @@
     </th:block>
     <th:block th:unless="${model.isApproved()}">
         <p>Innovate UK is reviewing
-            <th:block th:if="${!model.isAcademic()}">
+            <th:block th:unless="${model.isAcademic()}">
                 <a th:href="@{/project/{projectId}/finance-checks/eligibility(projectId=${model.projectId})}">your finances</a>.
             </th:block>
             <th:block th:if="${model.isAcademic()}">
