--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-checks.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-checks.html
@@ -41,22 +41,21 @@
     </th:block>
 
     <th:block th:unless="${model.noQueries()}">
-        <th:block th:if="${model.getPendingQueries().isEmpty()}">
-            <th:block th:if="${model.getAwaitingResponseQueries().isEmpty()}">
+        <th:block th:if="${model.anyPendingQueries()}">
+            <div class="warning-alert">
+                <p th:text="${model.onePendingQuery()} ? 'You have a pending finance query.' : 'You have pending finance queries.'"></p>
+            </div>
+        </th:block>
+
+        <th:block th:if="${model.noPendingAndAnyAwaitingResponseQueries()}">
+            <div class="assigned-alert">
+                <p>Your response has been sent and will be reviewed by Innovate UK.</p>
+            </div>
+        </th:block>
+        <th:block th:if="${model.onlyClosedQueries()}">
                 <div class="success-alert">
                     <p th:text="${model.isSingleQuery()} ? 'This query has been resolved.' : 'All queries have been resolved.'"></p>
                 </div>
-            </th:block>
-            <th:block th:unless="${model.getAwaitingResponseQueries().isEmpty()}">
-                <div class="assigned-alert">
-                    <p>Your response has been sent and will be reviewed by Innovate UK.</p>
-                </div>
-            </th:block>
-        </th:block>
-        <th:block th:unless="${model.getPendingQueries().isEmpty()}">
-            <div class="warning-alert">
-                <p>You have a pending finance query.</p>
-            </div>
         </th:block>
 
         <h2 class="heading-medium">Queries</h2>
@@ -89,7 +88,7 @@
                         </div>
                     </th:block>
                     <th:block th:unless="${model.queryId != null} or ${query.isClosed()}">
-                        <a id="post-new-response-1" th:href="@{{baseUrl}/{queryId}/new-response#form-query-__${query.id}__(baseUrl=${baseUrl},queryId=${query.id})}" class="extra-margin-top button">Respond</a>
+                        <a id="post-new-response-1" th:href="@{{baseUrl}/{queryId}/new-response#form-query-__${query.Id}__(baseUrl=${baseUrl},queryId=${query.Id})}" class="extra-margin-top button">Respond</a>
                     </th:block>
                     <th:block th:if="${model.queryId != null and query.id == model.queryId}" th:with="baseUrl=@{{baseUrl}/{queryId}/new-response(baseUrl=${baseUrl}, queryId=${model.queryId})}">
                         <form class="extra-margin" th:action="@{{baseUrl}(baseUrl=${baseUrl})}" th:object="${form}" th:id="${'form-query-' + query.id}" method="post"
@@ -184,7 +183,7 @@
                         </div>
                     </th:block>
                     <th:block th:unless="${model.queryId != null} or ${query.isClosed()}">
-                        <a id="post-new-response-2" th:href="@{{baseUrl}/{queryId}/new-response#form-query-__${query.id}__(baseUrl=${baseUrl},queryId=${query.id})}" class="extra-margin-top button">Respond</a>
+                        <a id="post-new-response-2" th:href="@{{baseUrl}/{queryId}/new-response#form-query-__${query.Id}__(baseUrl=${baseUrl},queryId=${query.id})}" class="extra-margin-top button">Respond</a>
                     </th:block>
                     <th:block th:if="${model.queryId != null and query.id == model.queryId}" th:with="baseUrl=@{{baseUrl}/{queryId}/new-response(baseUrl=${baseUrl}, queryId=${model.queryId})}">
                         <form class="extra-margin" th:action="@{{baseUrl}(baseUrl=${baseUrl})}" th:object="${form}" th:id="${'form-query-' + query.id}" method="post"
@@ -277,7 +276,7 @@
                         </div>
                     </th:block>
                     <th:block th:unless="${model.queryId != null} or ${query.isClosed()}">
-                        <a id="post-new-response-3" th:href="@{{baseUrl}/{queryId}/new-response#form-query-__${query.id}__(baseUrl=${baseUrl},queryId=${query.id})}" class="extra-margin-top button">Respond</a>
+                        <a id="post-new-response-3" th:href="@{{baseUrl}/{queryId}/new-response#form-query-__${query.Id}__(baseUrl=${baseUrl},queryId=${query.id})}" class="extra-margin-top button">Respond</a>
                     </th:block>
                     <th:block th:if="${model.queryId != null and query.id == model.queryId}" th:with="baseUrl=@{{baseUrl}/{queryId}/new-response(baseUrl=${baseUrl}, queryId=${model.queryId})}">
                         <form class="extra-margin" th:action="@{{baseUrl}(baseUrl=${baseUrl})}" th:object="${form}" th:id="${'form-query-' + query.id}" method="post"
