--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/manage-interview-panel.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/manage-interview-panel.html
@@ -33,7 +33,7 @@
     </ul>
 
     <ul class="link-list extra-margin">
-        <li><a class="disabled" aria-disabled="true">Assign applications</a></li>
+        <li><a th:href="@{/assessment/interview-panel/competition/{competitionId}/applications/find(competitionId=${model.competitionId})}">Assign applications</a></li>
 
         <li><a class="disabled" aria-disabled="true">Invite assessors</a></li>
 
