--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-panel-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-panel-find.html
@@ -14,43 +14,7 @@
               th:with="linkTitle='Competition',linkClass='link-back',linkUrl=@{/competition/{competitionId}(competitionId=${model.competitionId})}"/>
 
     <th:block th:insert="fragments/layout :: page-title"
-              th:with="pageTitle='Invite assessors to panel',subTitle=${model.competitionName},size='heading-xlarge'"/>
-    <h2 class="heading-medium">Key statistics</h2>
-
-    <div class="grid-row">
-        <div class="column-quarter">
-            <div class="highlight-panel highlight-panel-padded">
-                <span class="heading-large" th:text="${model.assessorsInvited}">60</span><br/>
-                <small>Invited</small>
-            </div>
-        </div>
-        <div class="column-quarter">
-            <div class="highlight-panel highlight-panel-padded">
-                <span class="heading-large" th:text="${model.assessorsAccepted}">23</span><br/>
-                <small>Accepted</small>
-            </div>
-        </div>
-        <div class="column-quarter">
-            <div class="highlight-panel highlight-panel-padded">
-                <span class="heading-large" th:text="${model.assessorsDeclined}">3</span><br/>
-                <small>Declined</small>
-            </div>
-        </div>
-        <div class="column-quarter">
-            <div class="highlight-panel highlight-panel-padded">
-                <span class="heading-large" th:text="${model.assessorsStaged}">6</span><br/>
-                <small>Assessors on invite list</small>
-            </div>
-        </div>
-    </div>
-
-    <dl class="standard-definition-list extra-margin">
-        <dt>Innovation sector</dt>
-        <dd th:text="${model.innovationSector}">Health and life sciences</dd>
-
-        <dt>Innovation area</dt>
-        <dd th:text="${model.innovationArea}">Agriculture and food</dd>
-    </dl>
+              th:with="pageTitle='Assign applications to interview panel',subTitle=${model.competitionId + ': ' + model.competitionName},size='heading-xlarge'"/>
 
     <div><br></div>
 
@@ -103,11 +67,11 @@
                            th:checked="${assessorPanelSelectionForm.getAllSelected()}"
                            th:disabled="${model.selectAllDisabled || model.pagination.totalCount == 0}"/>
                     <label for="select-all-check">
-                        Select all assessors
+                        Select all applications
                     </label>
                 </div>
                 <span class="form-hint">
-                    <span data-count-selected="" th:text="${#lists.size(assessorPanelSelectionForm.selectedIds)}"></span> assessors selected
+                    <span data-count-selected="" th:text="${#lists.size(assessorPanelSelectionForm.selectedIds)}"></span> applications selected
                 </span>
             </div>
             <div class="column-half select-all alignright">
@@ -121,40 +85,35 @@
             <table>
                 <thead>
                 <tr>
-                    <th scope="col">Select assessor</th>
-                    <th scope="col">Assessor name</th>
-                    <th scope="col">Type</th>
-                    <th scope="col">Innovation area</th>
-                    <th scope="col">Contract and DOI</th>
+                    <th scope="col">Select application</th>
+                    <th scope="col">Application</th>
+                    <th scope="col">Project title</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="assessor, index : ${model.assessors}">
+                <tr th:each="app, index : ${model.applications}">
                     <td>
                         <div class="multiple-choice">
                             <input type="checkbox"
                                    th:id="|assessor-row-${index.count}|"
                                    th:field="*{selectedIds}"
-                                   th:value="${assessor.id}"/>
+                                   th:value="${app.id}"/>
                             <label th:for="|assessor-row-${index.count}|">
                                 <span class="invisible">Add</span>
                             </label>
                         </div>
                     </td>
                     <td>
-                        <a th:href="@{/competition/{competitionId}/assessors/profile/{assessorId}(competitionId=${model.competitionId},assessorId=${assessor.id})} + ${originQuery}"
-                           th:text="${assessor.name}">John Barnes
+                        <a th:href="@{/competition/{competitionId}/assessors/profile/{assessorId}(competitionId=${model.competitionId},assessorId=${app.id})} + ${originQuery}"
+                           th:text="${app.id}">123
                         </a>
                     </td>
-                    <td th:text="${assessor.businessType}? ${assessor.businessType.displayName}">Industry</td>
-                    <td th:text="${assessor.innovationAreas}">Electronics, sensors &amp; photonics, Materials</td>
                     <td>
-                        <span class="yes" th:if="${assessor.compliant}">Yes</span>
-                        <span class="no" th:unless="${assessor.compliant}">No</span>
+                        <span th:text="${app.name}">project name</span>
                     </td>
                 </tr>
-                <tr th:if="${#lists.isEmpty(model.assessors)}">
-                    <td colspan="5">No available assessors found.</td>
+                <tr th:if="${#lists.isEmpty(model.applications)}">
+                    <td colspan="5">No available applications found.</td>
                 </tr>
                 </tbody>
             </table>
