--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fractal-components/progress-lists/04-applicant-project-in-setup.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fractal-components/progress-lists/04-applicant-project-in-setup.html
@@ -91,7 +91,7 @@
             <h2 class="heading-small">
                 Grant offer letter
             </h2>
-            <p class="no-margin">Once all tasks are complete the Project Manager can review and accept the grant offer letter on behalf of the project.</p>
+            <p class="no-margin">Once all tasks are complete the Project Manager can review, sign and submit the grant offer letter to Innovate UK.</p>
         </div>
     </li>
   </ul>
